fixed overflow in css

--- a/styles/cover.css
+++ b/styles/cover.css
@@ -43,6 +43,7 @@ body {
   color: #0084b4;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
+  overflow-x: hidden;
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
